--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
           npm install
           npm run build
 
-      - name: 📂 Sync files
+      - name: FTP Deploy
+        uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with:
           server: ftp.rubyswap.finance
           username: bino86@exchange.rubyswap.finance
