--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         with:
           server: ftp.rubyswap.finance
           username: bino86@exchange.rubyswap.finance
-          password: ${{ secrets.password }}
+          password: ${{ secrets.PASSWORD }}
           local-dir: ./build/
