--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         with:
           server: ftp.rubyswap.finance
           username: bino86@exchange.rubyswap.finance
-          password: m&RxU]&9%t(H
+          password: ${{ secrets.PASSWORD }}
           local-dir: ./build/
